finished initial form-fillout page as well as minor UI tweaks and correct page linking

--- a/peakform/src/app/globals.css
+++ b/peakform/src/app/globals.css
@@ -15,7 +15,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #f8f4ee;
-    --foreground: rgba(12, 44, 63);
+    --foreground: #0c2c3f;
   }
 }
 
